250_proxy_envoy/k8s/envoy-pod-svc-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envoy
  labels:
    app: envoy
spec:  
  # restartPolicy: Always
  containers:
  - name: envoy
    image: envoyproxy/envoy:v1.33-latest
    ports:
    - containerPort: 10000
    # command: [ "/bin/sh", "-c", "ls /etc/envoy/" ]
    args:
    - "--config-path"
    - "/etc/envoy/envoy.yaml"
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: config-volume
      mountPath: /etc/envoy
  volumes:
  - name: config-volume
    configMap:
      name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  selector:
    app: envoy
  ports:
  - protocol: TCP
    port: 10000
    targetPort: 10000
  type: LoadBalancer
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    admin:
      # access_log_path: /var/log/envoy_admin_access.log # commented as it caused pod restart loop
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0 # 127.0.0.1
          port_value: 9901
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: dynamic_forward_proxy_cluster
                  - match:
                      connect_matcher:
                        {}
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      upgrade_configs:
                      - upgrade_type: CONNECT
                        connect_config:
                          {}
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
                    typed_dns_resolver_config:
                      name: envoy.network.dns_resolver.cares
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                        resolvers:
                        - socket_address:
                            address: "1.1.1.1"
                            port_value: 53
                        dns_resolver_options:
                          use_tcp_for_dns_lookups: true
                          no_default_search_domain: true
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: dynamic_forward_proxy_cluster
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
              typed_dns_resolver_config:
                name: envoy.network.dns_resolver.cares
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                  resolvers:
                  - socket_address:
                      address: "1.1.1.1"
                      port_value: 53
                  dns_resolver_options:
                    use_tcp_for_dns_lookups: true
                    no_default_search_domain: true

    application_log_config:
      log_format:
        json_format:
          Timestamp: "%Y-%m-%dT%T.%F"
          ThreadId: "%t"
          SourceLine: "%s:%#"
          Level: "%l"
          Message: "%j"
          FixedValue: "SomeFixedValue"
